Implementación de preloader; se agrega logo de la pesca en navbar

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -24,13 +24,13 @@
                                                 <th>PRECIO</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="tbody-invoice">
+                                        <tbody id="tbody-invoice" >
                                             @foreach (var item in Model.items)
                                             {
                                              <tr>
                                                 <td>@item.name</td>
-                                                <td>@item.quantity</td>
-                                                <td>@item.price</td>
+                                                <td >@item.quantity</td>
+                                                <td class="text-right">@item.price</td>
                                              </tr>
                                             }
                                         </tbody>
