--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -17,6 +17,7 @@
     @RenderSection("HeaderScript", required: false)
 </head>
 <body class="animate__animated animate__fadeIn">
+    @await Html.PartialAsync("_Preloader")
     @*<partial name="_CookieConsentPartial" />*@
 
     <div class="wrap-main">
