--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
@@ -1,6 +1,8 @@
-﻿<nav class="navbar navbar-expand-md back-black">
+﻿<nav class="navbar navbar-expand-md back-black" style="height:100px">
     <div class="container">
-        <div class="logo"><span>LA PESCA</span></div>
+        <div class="">
+            <img src="~/images/logo-la-pesca.png" alt="Logo" style="margin:0; width:150px; height:100px; padding:7px;" />
+        </div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto   ">
                 <li class="nav-item"><a class="nav-link" href='@Url.Action("Index", "Home")'>Inicio</a></li>
