avance y prueba en la notificación en tiempo real al registrar un pedido

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -74,12 +74,12 @@
             </div>
             <div class="modal-body">
                 <div class="row container">
-                    <div class="col-6">
+                    <div class="col-sm-12 col-md-6">
                         <div id="wrap-price" class="text-center">
                             <span class="price text-success">$</span><span class="price text-success" id="modal-price"></span>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-sm-12 col-md-6">
                         <div class="input-group mb-3 mt-3">
                             <div class="input-group-prepend">
                                 <button type="button" class="btn btn-dark btn-lg" onclick="setQuantity(-1)"><i class="fa fa-minus"></i></button>
