--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
@@ -22,7 +22,7 @@
             return datos;
         }
 
-       
+
         const setOrder = (id_order) => {
             let user;
             let user_storage = localStorage.getItem('user');
@@ -66,7 +66,7 @@
             {
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered" id="tbl_delivery" style="width:100%">
-                        <thead >
+                        <thead>
                             <tr>
                                 <th scope="col">Nº PEDIDO</th>
                                 <th scope="col">CLIENTE</th>
@@ -77,7 +77,7 @@
                                 <th scope="col"></th>
                             </tr>
                         </thead>
-                        <tbody >
+                        <tbody>
                         </tbody>
                     </table>
                 </div>
@@ -102,7 +102,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body" >
+            <div class="modal-body">
                 <div class="row">
                     <div class="col-12">
                         <div class="table-responsive" style="padding:2rem;">
@@ -141,7 +141,7 @@
 
     $(document).ready(function () {
         let delivery_list = getDeliveryList();
-        
+
         tbl_delivery = $("#tbl_delivery").DataTable({
             "language": {
                 "url": "/datatables.net/datatables-es_es.json"
@@ -158,22 +158,22 @@
                 { data: 'id_order' }
             ],
             columnDefs: [
-            {
-                targets: 5,
-                data: 'items',
-                "render": function (items, type, row, meta) {
-                    return '<button class="btn btn-info btn-sm see-details" data-product=\''+items+'\'>Ver</a>';
+                {
+                    targets: 5,
+                    data: 'items',
+                    "render": function (items, type, row, meta) {
+                        return '<button class="btn btn-info btn-sm see-details" data-product=\'' + items + '\'>Ver</a>';
+                    }
+                },
+                { orderable: false, searchable: false, targets: -1 },
+                { orderable: false, searchable: false, targets: 4 }
+                , {
+                    targets: -1,
+                    data: 'id_order',
+                    "render": function (id_order, type, row, meta) {
+                        return '<button class="btn btn-success btn-sm" onclick="setOrder(' + id_order + ')">Asignarme</a>';
+                    }
                 }
-            },
-            { orderable: false, searchable: false, targets: -1 },
-            { orderable: false, searchable: false, targets: 4 }
-            ,{
-                targets: -1,
-                data: 'id_order',
-                "render": function (id_order, type, row, meta) {
-                    return '<button class="btn btn-success btn-sm" onclick="setOrder(' + id_order + ')">Asignarme</a>';
-                }
-            }
             ]
         });
 
@@ -185,8 +185,15 @@
     });
 
 
-
 </script>
 @section Scripts{
     <script src="~/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/order/notify.js" type="text/javascript"></script>
+    <script>
+        connection.on("ReceiveNotifyOrder", function () {
+            console.log('RECIBIDO');
+            updateOrdersTable();
+        });
+    </script>
 }
