--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -10,8 +10,8 @@
             <div class="card p-3">
                 <div class="card-body">
                     <h2>Estamos preparando tu pedido</h2>
-                    <p>Nuestro repartidor encargado es <strong></strong>, se pondrá en contacto contigo al llegar a tu ubicación.</p>
-                    <strong class="mr-5">Nº pedido: @Model.Number<span id="delivery-time"></span></strong><strong class="ml-5">Hora de entrega: @Model.DeliveryTime</strong> <span id="delivery-time"></span>
+                    <p>Nuestro repartidor encargado, se pondrá en contacto contigo al llegar a tu ubicación.</p>
+                    <strong class="mr-5">Nº pedido: @Model.Number<span id="delivery-time"></span></strong><strong class="ml-5">Llegada estimada: @Model.DeliveryTime</strong> <span id="delivery-time"></span>
                     <section class="mt-4">
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
