Se corrije el ingreso de numero de teléfono; se muestra los datos ordenados de mayor a menor; se quitan botones de notificaciones en navbar de dashboard

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/MyDeliveries.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/MyDeliveries.cshtml
@@ -163,6 +163,7 @@
                 "url": "/datatables.net/datatables-es_es.json"
             },
             paging: true,
+            order: [],
             data: delivery_list,
             columns: [
                 { data: null },
