--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
@@ -141,13 +141,14 @@
 
     $(document).ready(function () {
         let delivery_list = getDeliveryList();
-
+        console.log(delivery_list);
         tbl_delivery = $("#tbl_delivery").DataTable({
             "language": {
                 "url": "/datatables.net/datatables-es_es.json"
             },
             paging: true,
             data: delivery_list,
+            order: [],
             columns: [
                 { data: 'number' },
                 { data: 'customer_name' },
@@ -166,7 +167,7 @@
                     }
                 },
                 { orderable: false, searchable: false, targets: -1 },
-                { orderable: false, searchable: false, targets: 4 }
+                { orderable: false, searchable: false, targets: 5 }
                 , {
                     targets: -1,
                     data: 'id_order',
