--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="~/css/bootstrap.min.css">
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
-        <link href="~/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+        <link href="~/datatables.net/" rel="stylesheet" />
+        <link href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/sweetalert2.min.css">
 
         <!--fontawesome-all.min.js-->
@@ -49,10 +50,7 @@
                                 <i class="icon-submenu fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
-                                <li><a href="#"><i class="lnr lnr-envelope"></i> <span>Message</span></a></li>
-                                <li><a href="#"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li>
-                                <li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
+                                <li><a href="#"><i class="lnr lnr-exit"></i> <span>Cerrar sesión</span></a></li>
                             </ul>
                         </li>
                     </ul>
@@ -159,11 +157,6 @@
 
     <!--feather.min.js-->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-
-    <!-- DataMaps Plugin Js -->
-    <script src="~/js/d3.min.js"></script>
-    <script src="~/js/topojson.js"></script>
-    <script src="~/js/datamaps.world.min.js"></script>
 
     <!--Custom JS-->
     <script src="~/js/custom.js"></script>
