--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -1,70 +1,38 @@
 ﻿@model Neutrinodevs.PedidosOnline.Domain.DTOs.User.UserAuthenticateDto
 @{
-    Layout = "_DashboardLayout";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Administración";
 }
-
 @section HeaderScripts{
     <script>
         var tbl_order_list;
+        var order_list;
+
+        const getData = (resp) => {
+            order_list = JSON.parse(resp);
+        }
 
         const getOrderList = () => {
-            var datos = [];
             $.ajax({
                 url: '/Dashboard/GetAll',
                 async: false,
                 type: 'POST',
-                contentType: 'application/json',
-                success: function (resp) {
-                    datos = JSON.parse(resp);
-                },
-                error: (err) => { console.log(err); return undefined; }
-            });
-            return datos;
-        }
-
-
-        const setOrder = (id_order) => {
-            let user;
-            let user_storage = localStorage.getItem('user');
-            if (user_storage)
-                user = JSON.parse(user_storage);
-
-            $.ajax({
-                url: '/Order/AssignDelivery',
-                type: 'POST',
-                data: JSON.stringify({ IdOrder: id_order, IdEmployee: user.id_user }),
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function (response) {
-                    console.log(response);
-                    if (response.code == '000') {
-                        updateOrdersTable();
-                        Swal.fire("Mensaje", response.message, "success");
-                    }
-                    else
-                        Swal.fire("Mensaje", response.message, "error");
-                },
+                contentType: "application/json; charset=utf-8",
+                success: getData,
                 error: function (err) {
-                    console.log(err);
-                    Swal.fire("Mensaje", "Se ha producido un error en la asignación", "error");
+                    console.log(err.responseText);
                 }
             });
         }
 
         const updateOrdersTable = () => {
-            let delivery_list = getDeliveryList();
-            console.log(delivery_list);
-            tbl_order_list.clear().rows.add(delivery_list).draw();
+            getOrderList();
+            console.log(order_list);
+            tbl_order_list.clear().rows.add(order_list).draw();
         }
     </script>
 }
-
-<div class="main-content-head">
-
-</div>
-
-<div class="row">
+<div class="row" style="margin-top:2rem">
     <div class="col-sm-12">
         <div class="box">
             <div class="box-head">
@@ -75,30 +43,30 @@
                     <table class="table table-hover" id="tbl_order_list">
                         <thead>
                             <tr>
+                                <th scope="col"></th>
                                 <th scope="col">Nº</th>
-                                <th scope="col">FECHA</th>
+                                <th scope="col">FECHA/HORA</th>
                                 <th scope="col">TOTAL</th>
                                 <th scope="col">ESTADO</th>
-                                <th scope="col">REPARTIDOR</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td><a href="#">1</a></td>
-                                <td>Shamsu</td>
-                                <td>$25050</td>
-                                <td>185</td>
-                                <td>
-                                    <span class="item-status delivered">Delivered</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><a href="#">2</a></td>
-                                <td>Shamsu</td>
-                                <td>$25050</td>
-                                <td>185</td>
-                                <td><span class="item-status cancel">Cancel</span></td>
-                            </tr>
+                            @*<tr>
+                                    <td><a href="#">1</a></td>
+                                    <td>Shamsu</td>
+                                    <td>$25050</td>
+                                    <td>185</td>
+                                    <td>
+                                        <span class="item-status delivered">Delivered</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><a href="#">2</a></td>
+                                    <td>Shamsu</td>
+                                    <td>$25050</td>
+                                    <td>185</td>
+                                    <td><span class="item-status cancel">Cancel</span></td>
+                                </tr>*@
                         </tbody><!--/tbody-->
                     </table><!--/.table-->
                 </div><!--/.table-responsive-->
@@ -107,48 +75,58 @@
     </div><!--/.col-->
 </div><!--/.row-->
 <script>
+
+   
+
+
     $(document).ready(function () {
-        let delivery_list = getOrderList();
-        console.log(delivery_list);
-        tbl_delivery = $("#tbl_order_list").DataTable({
+        getOrderList();
+        //let order_list = getOrderList();
+        console.log(order_list);
+        tbl_order_list = $("#tbl_order_list").DataTable({
             "language": {
                 "url": "/datatables.net/datatables-es_es.json"
             },
             paging: true,
-            data: delivery_list,
+            data: order_list,
             order: [],
             columns: [
+                { data: 'id_order' },
                 { data: 'number' },
-                { data: 'customer_name' },
-                { data: 'cellphone_number' },
-                { data: 'address' },
-                { data: 'total', render: $.fn.dataTable.render.number(',', '.', 2, '') },
-                { data: 'items' },
-                { data: 'id_order' }
+                { data: 'date' },
+                { data: 'total_amount', render: $.fn.dataTable.render.number(',', '.', 2, '') },
+                { data: 'id_stage' },
             ],
-            columnDefs: [
+            "columnDefs": [
+                { "targets": 0, "visible": false, "searchable": false },
                 {
-                    targets: 5,
+                    targets: 4,
                     data: 'items',
-                    "render": function (items, type, row, meta) {
-                        return '<button class="btn btn-info btn-sm see-details" data-product=\'' + items + '\'>Ver</a>';
+                    "render": function (item, type, row, meta) {
+                        if (item == 1) {
+                            return '<span class="badge  alert-warning">' + row.stage + '</span>';
+                        } else if (item == 2) {
+                            return '<span class="badge  alert-info">' + row.stage + '</span>';
+                        } else if (item == 3) {
+                            return '<span class="badge alert-primary">' + row.stage + '</span>';
+                        } else if (item == 4) {
+                            return '<span class="badge alert-success">' + row.stage + '</span>';
+                        } else {
+                            return '<span class="badge alert-danger">' + row.stage + '</span>';
+                        }
+
                     }
                 },
-                { orderable: false, searchable: false, targets: -1 },
-                { orderable: false, searchable: false, targets: 5 }
-                , {
-                    targets: -1,
-                    data: 'id_order',
-                    "render": function (id_order, type, row, meta) {
-                        return '<button class="btn btn-success btn-sm" onclick="setOrder(' + id_order + ')">Asignarme</a>';
-                    }
-                }
             ]
         });
+    });
+
+   
 </script>
 @section Scripts{
     <script src="~/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/order/notify.js" type="text/javascript"></script>
     <script>
         connection.on("ReceiveNotifyOrder", function () {
             console.log('RECIBIDO');
