--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -379,3 +379,7 @@ input:focus {
 nav ul li a {
     line-height: 70px;
 }
+
+.card {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
+}
