Se avanza con el menu responsive para home

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -37,7 +37,7 @@
         <div class="box">
             <div class="box-head">
                 <h2>Nuevos Pedidos</h2>
-            </div><!--/.box-head-->
+            </div>
             <div class="item">
                 <div class="item-responsive ">
                     <table class="table table-hover" id="tbl_order_list">
@@ -51,22 +51,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @*<tr>
-                                    <td><a href="#">1</a></td>
-                                    <td>Shamsu</td>
-                                    <td>$25050</td>
-                                    <td>185</td>
-                                    <td>
-                                        <span class="item-status delivered">Delivered</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><a href="#">2</a></td>
-                                    <td>Shamsu</td>
-                                    <td>$25050</td>
-                                    <td>185</td>
-                                    <td><span class="item-status cancel">Cancel</span></td>
-                                </tr>*@
                         </tbody><!--/tbody-->
                     </table><!--/.table-->
                 </div><!--/.table-responsive-->
@@ -75,8 +59,6 @@
     </div><!--/.col-->
 </div><!--/.row-->
 <script>
-
-   
 
 
     $(document).ready(function () {
