--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="brand">
                 <a href="index.html">
-                    LA PESCA
+                    <img src="~/images/logo-la-pesca.png" alt="Logo" />
                 </a>
             </div><!--/.brand -->
             <div class="container-fluid">
@@ -43,6 +43,7 @@
                 </div><!--/.navbar-btn -->
                 <div class="navbar-menu">
                     <ul class="nav navbar-nav navbar-right">
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="/images/dashboard/parson.png" class="img-circle" alt="parson-img">
