--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-expand-md back-black" style="height:100px">
     <div class="container">
         <div class="">
-            <img src="~/images/logo-la-pesca.png" alt="Logo" style="margin:0; width:150px; height:100px; padding:7px;" />
+            <img src="~/images/logo-la-pesca.png" alt="Logo" class="logo-pesca"/>
         </div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto   ">
