--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
@@ -11,7 +11,8 @@
     </div>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div id="wrap_order_detail table-responsive">
+            <div id="wrap_order_detail" class="table-responsive">
+            <div id="wrap_order_detail" class="table-responsive">
                 <table class="table table-hover" id="tbl_order">
                     <thead class="bg-black text-white">
                         <tr>
@@ -30,7 +31,7 @@
 
     <div class="row">
         <div class="offset-lg-6 col-lg-6  offset-md-6 col-md-6 col-sm-6 col-xs-12">
-            <div id="wrap_order_detail table-responsive">
+            <div id="">
                 <table class="table" id="tbl_order">
                     <tbody class='text-right'>
                         <tr>
@@ -51,9 +52,9 @@
         </div>
     </div>
     <div class="row mt-4">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
-            <a href='@Url.Action("Index", "Home")' class="btn bg-black text-white py-2 px-5 ">SEGUIR COMPRANDO</a>
-            <a href='@Url.Action("Checkout", "Order")' class="btn btn-success py-2 px-5 ml-3" >REALIZAR PEDIDO</a>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right option-buttons">
+            <a href='@Url.Action("Index", "Home")' class="btn bg-black text-white py-2 px-5 my-2">SEGUIR COMPRANDO</a>
+            <a href='@Url.Action("Checkout", "Order")' class="btn btn-success py-2 px-5 ml-3 my-2" >REALIZAR PEDIDO</a>
         </div>
     </div>
 </div>
