--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -6,20 +6,24 @@
 
 <header>
     <nav class="nav-home">
-        <div class="logo"><span style="display:none">LA PESCA</span></div>
-        <ul class="">
+        <div class="logo"> 
+              <img src="~/images/logo-la-pesca.png" class="logo-pesca logo-hide" alt="Logo" />
+        </div>
+        <ul class="menu-items">
             <li><a href='@Url.Action("Index", "Home")'>Inicio</a></li>
             <li><a href='@Url.Action("About", "Home")'>Sobre nosotros</a></li>
-            <li>
+            <li data-button-item>
                 <button class="btn back-primary btn-cart" id="btn_shopping_cart">
                     <i class="fa fa-shopping-cart"></i>
                     <span id="quantity_cart" class="badge">0</span>
                 </button>
+            </li >
+            <li data-button-item>
+                <button class="btn btn-login px-3 py-1" id="login"><i class="fa fa-user" aria-hidden="true"></i></button>
             </li>
-            <li><button class="btn btn-login px-3 py-1" id="login"><i class="fa fa-user" aria-hidden="true"></i></button></li>
         </ul>
 
-        <section></section>
+        <span class="btn-menu"><i class="fa fa-bars" aria-hidden="true"></i></span>
     </nav>
 </header>
 <script>
